--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -625,7 +625,6 @@ button{
         }
         @include for-md-mob{
             padding: 0 5px ;
-            margin-bottom: 7px;
             font-size: 10px;
             line-height: 16px;
         }
@@ -1918,4 +1917,287 @@ button{
             height: 12px;
         }
     }
+}
+
+
+
+.contacts-page{
+    &__inner{
+        padding: 84px 25px 0;
+        background-color: $white;
+        @include for-sm{
+            padding: 30px 25px 0;
+        }
+        @include for-md-mob{
+            padding: 30px 15px 0;
+        }
+
+    }
+    &__tabs{
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 83px; 
+        &::after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background-color: #bdbdbd;
+            top: 50%;
+        }
+        @include for-md{
+            margin-top: 40px;
+        }
+        @include for-md-mob{
+            margin-top: 20px;
+        }
+    }
+    &__tab{
+        position: relative;
+        padding: 0 13px;
+        padding-left: 13px;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 22px;
+        color: $blue;
+        white-space: nowrap;
+        background-color: #fff;
+        z-index: 10;
+        &:first-child{
+            padding-left: 0;
+        }
+        &:last-child{
+            padding-right: 0;
+            
+        }
+        &.active{
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 28px;
+            color: $black;
+            @include for-sm{
+                font-size: 16px;
+                line-height: 18px;
+            }
+            @include for-md-mob{
+                font-size: 14px;
+                line-height: 18px;
+            }
+        }
+        @include for-md{
+            text-align: center;
+            white-space: initial;
+        }
+        @include for-sm{
+            font-size: 14px;
+            line-height: 18px;
+        }
+        @include for-md-mob{
+            padding: 0 5px ;
+            font-size: 12px;
+            line-height: 16px;
+        }
+        
+    }
+}
+.contacts-page{
+    &__item{
+        margin-top: 61px;
+    }
+}
+.contact-item{
+    &__inner{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__communication-link{
+        margin-left: 0;
+    }
+    &__address{
+        margin-top: 48px;
+        font-weight: 500;
+    }
+    &__link-map{
+        margin-top: 27px;
+        padding-right: 18px;
+        position: relative;
+        display: inline-block;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 18px;
+        color: #3481b8;
+        text-decoration: underline;
+        &::after{
+            content: '';
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 0;
+            width: 12px;
+            height: 12px;
+            background-image: url(../img/arrow-right-solid.svg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            fill: #3481b8;
+        }
+        
+    }
+    &__social{
+        display: flex;
+        margin-top: 45px;
+    }
+    &__social-item{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: $blue;
+    }
+    &__social-item + &__social-item{
+        margin-left: 7px;
+    }
+    &__img-block{
+        max-width: 727px;
+    }
+    &__img{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+    &__map-block{
+        margin-top: 73px;
+        height: 505px;
+    }
+    &__map{
+        width: 200%;
+        margin-left: -50%;
+    }
+}
+.team{
+    &__title{
+        color: $white;
+    }
+    &__inner{
+        padding-bottom: 123px;
+    }
+    &__row{
+        display: grid;
+        margin: 38px auto 0;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 285px);
+        max-width: 1870px;
+        grid-gap: 20px;
+        @include for-xl{
+            // grid-auto-columns: auto;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(5, 285px);
+            grid-auto-flow: row;
+        }
+    }
+    &__img-block{
+        position: relative;
+        
+    }
+    &__item{
+        position: relative;
+        overflow: hidden;
+        &:before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: url(../img/services-item-before.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            bottom: 0;
+            left: 0;
+        }
+        &--1{
+            @include for-xl{
+                grid-column-start: auto;
+                grid-column-end: auto;
+                grid-row-start: auto;
+                grid-row-end: auto;
+            }
+        }
+        &--2{
+            grid-column-start: 2;
+            grid-column-end: 4;
+            grid-row-start: 1;
+            grid-row-end: 1;
+            @include for-xl{
+                grid-column-start: auto;
+                grid-column-end: auto;
+                grid-row-start: auto;
+                grid-row-end: auto;
+            }
+            
+            
+        }
+        &--3{
+            @include for-xl{
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 2;
+                grid-row-end: 3;
+            }
+        }
+        &--5{
+            grid-column-start: 2;
+            grid-column-end: 2;
+            grid-row-start: 2;
+            grid-row-end: 4;
+            @include for-xl{
+                grid-column-start: auto;
+                grid-column-end: auto;
+                grid-row-start: auto;
+                grid-row-end: auto;
+            }
+        }
+        &--7{
+            grid-column-start: 4;
+            grid-column-end: 4;
+            grid-row-start: 2;
+            grid-row-end: 4;
+            @include for-xl{
+                grid-column-start: auto;
+                grid-column-end: auto;
+                grid-row-start: auto;
+                grid-row-end: auto;
+            }
+        }
+    }
+    
+    &__img{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+    &__item-text{
+        position: absolute;
+        z-index: 10;
+        bottom: 30px;
+        width: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    &__item-title{
+        font-weight: 600;
+        font-size: 22px;
+        line-height: 26px;
+        color: $white;
+        text-align: center;
+    }
+    &__item-position{
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        color: $white;
+        text-align: center;
+    }
+    
 }
