--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -708,6 +708,7 @@ button{
             top: 13px;
             @include for-md-mob{
                 top: 5px;
+                left: 0;
             }
             
         }      
